make prompt color contrast to be visible and clear prompts on success for better feedback https://github.com/Techtonica/keyboard-shortcuts-practice/issues/26

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -75,7 +75,8 @@ width: 72px;
 background: orange !important;
 }
 .prompt{
-background: blue !important;
+  color: white;
+  background: blue !important;
 }
 .uppercase {
 text-transform: uppercase;
